@@ -1,5 +1,10 @@
 2011-01-17 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCtree_dec.hpp:
+	  Fixed const-correctness of iterators.
+
+2011-01-17 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/ralloc2.cc:
 	  Fixed confusion of std::map/std::multimap iterators.
 
